test_runs/1027_ESL/1027_ESL_BingoRegressor_23654_evaluate_model.3939324.err
/uufs/notchpeak.peaks/sys/var/slurm/slurmd.spool/notch273//job3939324/slurm_script: line 13: plg_modules.sh: No such file or directory
  File "evaluate_model.py", line 30
    print(40*'=','Evaluating '+est_name+' on ',dataset,40*'=',sep='\n')
                                                                 ^
SyntaxError: invalid syntax
